# python-sibilant

./: .coveragerc  .flake8  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  Containerfile  Dockerfile  README.md  TODO  run_docker_tests.sh  setup.cfg  setup.json  setup.lspy  setup.py  sibsetup.lspy  test.py  venv.sh  venv_install.sh
docker/: cpython35.debug  cpython35.test  cpython36.debug  cpython36.test  cpython37.debug  cpython37.test  cpython38.test  debug-compose.yml  docker-compose.yml  gdbinit  test-compose.yml  tests.sh
docs/: Makefile  builtins.md  builtins.rst  conf.py  index.rst  overview.rst  quick.md  sibilant.compiler.rst  sibilant.rst
examples/: flasky.lspy  reader-macro.lspy  simple-flask.lspy  simpleflask.lspy
examples/sample-project/: setup.py
examples/sample-project/sibsampl/: __init__.py  cli.lspy
examples/sibilant-flask-coolname/: Dockerfile  README.md  run.sh
examples/sibilant-flask-coolname/sibfcn/: __init__.py  app.lspy  render.tmpl
examples/sibilant-life/: README.md  setup.py
examples/sibilant-life/siblife/: __init__.py  cli.lspy  curse.lspy  life.lspy
ideas/: arrange_compiler  build_class.py  bup.py  collect.py  formals-unpack  gen.lspy  gimme_2.lspy  sample_while.lspy  syntax.lspy  tcr.txt  todo-builtins  todo-specials  todo-time  values_idea.py  varnames.py
include/: py3-sibilant.h  sibilant-tco.h  sibilant-types.h
sibilant/: __init__.py  __main__.py  _atoms.c  _bootstrap_builtins.py  _builtins.lspy  _pair.c  _tco.c  _types.c  _types.h  _util.c  _values.c  ast.py  basics.lspy  bootstrap.py  builtins.py  chain.py  cli.lspy  cli.py  closures.py  compile.py  compiler.py  cond.py  ctypes.c  ctypes.h  dispatch.py  eval.py  expression.py  extparse.py  generate.py  idea  importer.py  importlib.py  lib.py  macro.py  module.py  operators.py  parse.py  parser.py  print.py  process.py  (+7 more)
sibilant/compiler/: __init__.py  cpython33.py  cpython35.py  cpython36.py  cpython37.py  ctco.c  operators.py  pypy35.py  specials.lspy  specials.py  tco.c  tco.py
sibilant/compiler/targets/: cpython35.py  cpython36.py  cpython37.py  cpython38.py
sibilant/cps/: __init__.py  builtins.py  kstyle.py
sibilant/ext/: __init__.py  atom.c  pair.c  sibilant.h  tco.c  util.c  values.c
sibilant/lib/: __init__.py  _pair.c  _pair.h  _tco.c  _types.c  atom.c  bootstrap.py  ctco.c  pair.c  specials.py  tco.c  types.c  types.h  values.c
sibilant/pseudops/: __init__.py  cpython35.py  cpython36.py  stack.py
sibilant/pseudops/targets/: cpython35.py  cpython36.py  cpython37.py  cpython38.py
sibilant/site/: argparse.lspy  dis.lspy  setuptools.lspy
sibilant/test/: __init__.py
src2/: chain.py  cond.sc  foo.sc  parse.py  visitor.py
tests/: __init__.py  ast.py  basics.py  builtins.py  compiler.py  dispatch.py  expression.py  module.py  operators.py  parse.py  specials.py  tco.py  types.py  visitor.py
tests/compiler/: __init__.py  operators.py  specials.py  tco.py
tests/docker/: README.md  cpython35.test  cpython36.test  cpython37.test  debug-compose.yml  test-compose.yml  tests.sh
tests/sibilant/: __init__.py  basics.lspy  builtins.lspy
tools/: README.md
